--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -104,20 +104,20 @@
 
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item" href="menu.html">
+                    <a class="navbar-item" idSubcategory="1">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Foto-Libro con Fotos
                     </a>
 
 
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Foto-Libro sin Fotos
                     </a>
                     <hr class="navbar-divider">
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="3">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Caja con Fotos
@@ -155,52 +155,52 @@
                   </div>
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="4">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Carcasa para Celular
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="5">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Invitación a evento - Tarjeta de felicitación
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="6">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Portavasos
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="7">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Porta-retrato
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="8">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Rompecabezas
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item"idSubcategory="9">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Termo
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="10">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Libreta
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="11">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Mousepad
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="12">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Playera
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="13">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Lapicero
@@ -225,18 +225,18 @@
                   </div>
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="14">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Marco con Foto
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="16">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Marco sin Foto
                     </a>
                     <hr class="navbar-divider">
-                    <a class="navbar-item">
+                    <a class="navbar-item" idSubcategory="15">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Bastidor con Foto
