--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -104,20 +104,20 @@
 
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item" idSubcategory="1">
+                    <a class="navbar-item Subcategory" data-Subcategory="1" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Foto-Libro con Fotos
                     </a>
 
 
-                    <a class="navbar-item" idSubcategory="2">
+                    <a class="navbar-item Subcategory" data-Subcategory="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Foto-Libro sin Fotos
                     </a>
                     <hr class="navbar-divider">
-                    <a class="navbar-item" idSubcategory="3">
+                    <a class="navbar-item Subcategory" data-Subcategory="3" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Caja con Fotos
@@ -155,52 +155,52 @@
                   </div>
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item" idSubcategory="4">
+                    <a class="navbar-item Subcategory" data-Subcategory="4" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Carcasa para Celular
                     </a>
-                    <a class="navbar-item" idSubcategory="5">
+                    <a class="navbar-item Subcategory" data-Subcategory="5" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Invitación a evento - Tarjeta de felicitación
                     </a>
-                    <a class="navbar-item" idSubcategory="6">
+                    <a class="navbar-item Subcategory" data-Subcategory="6" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Portavasos
                     </a>
-                    <a class="navbar-item" idSubcategory="7">
+                    <a class="navbar-item Subcategory" data-Subcategory="7" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Porta-retrato
                     </a>
-                    <a class="navbar-item" idSubcategory="8">
+                    <a class="navbar-item Subcategory" data-Subcategory="8" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Rompecabezas
                     </a>
-                    <a class="navbar-item"idSubcategory="9">
+                    <a class="navbar-item Subcategory"data-Subcategory="9" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Termo
                     </a>
-                    <a class="navbar-item" idSubcategory="10">
+                    <a class="navbar-item Subcategory" data-Subcategory="10" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Libreta
                     </a>
-                    <a class="navbar-item" idSubcategory="11">
+                    <a class="navbar-item Subcategory" data-Subcategory="11" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Mousepad
                     </a>
-                    <a class="navbar-item" idSubcategory="12">
+                    <a class="navbar-item Subcategory" data-Subcategory="12" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Playera
                     </a>
-                    <a class="navbar-item" idSubcategory="13">
+                    <a class="navbar-item Subcategory" data-Subcategory="13" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Lapicero
@@ -225,18 +225,18 @@
                   </div>
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item" idSubcategory="14">
+                    <a class="navbar-item Subcategory" data-Subcategory="14" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Marco con Foto
                     </a>
-                    <a class="navbar-item" idSubcategory="16">
+                    <a class="navbar-item Subcategory" data-Subcategory="16" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Marco sin Foto
                     </a>
                     <hr class="navbar-divider">
-                    <a class="navbar-item" idSubcategory="15">
+                    <a class="navbar-item Subcategory" data-Subcategory="15" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Bastidor con Foto
