send Category by init

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -293,7 +293,7 @@
             Las posibilidades son tantas como la imaginación lo permita.<br>
           </p>
           <br> <br>
-          <a data-Subcategory="1" class="Subcategory" href="custom_products.html"><button
+          <a data-Subcategory="1" data-Category="1" class="Subcategory" href="custom_products.html"><button
               class="button is-primary is-outlined">Probar ahora</button></a>
         </div>
         <div class="column im">
