fix carrusel products

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -311,7 +311,7 @@
           <div class="hero-body" style="height: 310px; padding: 0px;">
             <div id="carousel-products" class="hero-carousel">
               <div class="item-1 columns">
-                <div class="column">
+                <!-- <div class="column is-one-third">
                   <div class="card">
                     <div class="card-image">
                       <figure class="image is-4by3">
@@ -329,7 +329,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="column">
+                <div class="is-one-third">
                   <div class="card">
                     <div class="card-image">
                       <figure class="image is-4by3">
@@ -346,7 +346,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="column">
+                <div class="is-one-third">
                   <div class="card">
                     <div class="card-image">
                       <figure class="image is-4by3">
@@ -362,7 +362,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
               <div class="item-2 columns">
 
