--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -86,7 +86,7 @@
       <nav id="secondNav" class="navbar is-fixed-top is-purple has-text-centered" style="margin-top: 68px;">
         <div class="navbar-menu has-text-centered">
           <div class="navbar-start" style="padding-left: 100px;">
-            <a class="navbar-item Subcategory" data-Subcategory="0">
+            <a class="navbar-item Subcategory" data-Category="0">
               Home
             </a>
             <div class="navbar-item has-dropdown is-hoverable">
@@ -104,20 +104,20 @@
 
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item Subcategory" data-Subcategory="1" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="1" data-Category="1" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Foto-Libro con Fotos
                     </a>
 
 
-                    <a class="navbar-item Subcategory" data-Subcategory="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="2" data-Category="1" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Foto-Libro sin Fotos
                     </a>
                     <hr class="navbar-divider">
-                    <a class="navbar-item Subcategory" data-Subcategory="3" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="3" data-Category="1" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Caja con Fotos
@@ -135,6 +135,7 @@
                 </div>
               </div>
             </div>
+
             <div class="navbar-item has-dropdown is-hoverable">
               <a class="navbar-link">
                 Foto-Regalos
@@ -155,52 +156,52 @@
                   </div>
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item Subcategory" data-Subcategory="4" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="4" data-Category="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Carcasa para Celular
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="5" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="5" data-Category="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Invitación a evento - Tarjeta de felicitación
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="6" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="6" data-Category="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Portavasos
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="7" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="7" data-Category="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Porta-retrato
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="8" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="8" data-Category="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Rompecabezas
                     </a>
-                    <a class="navbar-item Subcategory"data-Subcategory="9" href="custom_products.html">
+                    <a class="navbar-item Subcategory"data-Subcategory="9" data-Category="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Termo
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="10" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="10" data-Category="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Libreta
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="11" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="11" data-Category="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Mousepad
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="12" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="12" data-Category="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Playera
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="13" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="13" data-Category="2" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Lapicero
@@ -225,18 +226,18 @@
                   </div>
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item Subcategory" data-Subcategory="14" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="14" data-Category="3" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Marco con Foto
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="16" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="16" data-Category="3" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Marco sin Foto
                     </a>
                     <hr class="navbar-divider">
-                    <a class="navbar-item Subcategory" data-Subcategory="15" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="15" data-Category="3" href="custom_products.html">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Bastidor con Foto
@@ -293,7 +294,7 @@
             Las posibilidades son tantas como la imaginación lo permita.<br>
           </p>
           <br> <br>
-          <a data-Subcategory="1" data-Category="1" class="Subcategory" href="custom_products.html"><button
+          <a data-Subcategory="1" data-Category="1" class="Customizable" href="custom_products.html"><button
               class="button is-primary is-outlined">Probar ahora</button></a>
         </div>
         <div class="column im">
@@ -311,59 +312,9 @@
           <div class="hero-body" style="height: 310px; padding: 0px;">
             <div id="carousel-products" class="hero-carousel">
               <div class="item-1 columns">
-                <div class="column">
-                  <div class="card">
-                    <div class="card-image">
-                      <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" height="10px"
-                          alt="Placeholder image">
-                      </figure>
-                    </div>
-                    <div class="card-content">
-                      <div class="content">
-                        <p><span class="titPCaroussel" id="titP1">Titulo del producto1
-                          </span><span class="costPCaroussel">$costo</span></p>
-                        <button class="button is-danger">Personalizar</button>
-
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="card">
-                    <div class="card-image">
-                      <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" height="10px"
-                          alt="Placeholder image">
-                      </figure>
-                    </div>
-                    <div class="card-content">
-                      <div class="content">
-                        <p><span class="titPCaroussel" id="titP1">Titulo del producto2 </span><span
-                            class="costPCaroussel">$costo</span></p>
-                        <button class="button is-danger">Personalizar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="column">
-                  <div class="card">
-                    <div class="card-image">
-                      <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" height="10px"
-                          alt="Placeholder image">
-                      </figure>
-                    </div>
-                    <div class="card-content">
-                      <div class="content">
-                        <p><span class="titPCaroussel" id="titP1">Titulo del producto3 </span><span
-                            class="costPCaroussel">$costo</span></p>
-                        <button class="button is-danger">Personalizar</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+               
               </div>
+
               <div class="item-2 columns">
 
               </div>
@@ -440,7 +391,7 @@
   <script src="js/jquery.twbsPagination.js" type="text/javascript"></script>
   <!-- Menu Script -->
   <script type="text/javascript" src="https://unpkg.com/bulma-modal-fx/dist/js/modal-fx.min.js"></script>
-  <script src="js/menu.js" type="module"></script>
+  <script src="js/index.js" type="module"></script>
   <!--Scripts Steps productos-->
   <script src="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/js/bulma-steps.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
