--- a/ecommerce/catalogoProducts.html
+++ b/ecommerce/catalogoProducts.html
@@ -263,11 +263,9 @@
   </section>
 
     <!-- Sección donde se agregará los demás elementos html -->
-    <div id="Content">
-      <!-- Start Hero Carousel -->
-      <section  style="padding-top: 120px;">
+      <section id="products"  style="padding-top: 120px;">
+            
       </section>
-    </div>
 
 
 
@@ -276,7 +274,7 @@
     <div class="toast-container">
 
     </div>
-
+ 
     <section class="footerEcommerce">
       <div class="firstFooter">
         <div class="line">
