--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -357,19 +357,19 @@
             <h6>Redes Sociales</h6>
             <div class="field has-addons">
               <p class="control">
-                <button class="button is-rounded is-small is-outlined">
-                  <i class="fa fa-facebook"></i>
-                </button>
+                <a href="#">
+                  <img src="resources/facebook-box.png" width="25px">
+                </a>
               </p>
               <p class="control">
-                <button class="button is-rounded is-small is-outlined">
-                  <i class="fa fa-instagram"></i>
-                </button>
+                <a href="#">
+                  <img src="resources/instagram.png" width="25px">
+                </a>
               </p>
               <p class="control">
-                <button class="button is-rounded is-small is-outlined">
-                  <i class="fa fa-twitter"></i>
-                </button>
+                <a href="#">
+                  <img src="resources/twitter-box.png" width="25px">
+                </a>
               </p>
             </div>
           </div>
