--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -55,14 +55,14 @@
         <div class="level-item">
           <div class="field has-addons">
             <p class="control">
-              <button class="button is-danger">
+              <button id="search" class="button is-danger">
                 <span class="icon">
                   <i class="fas fa-search"></i>
                 </span>
               </button>
             </p>
             <p class="control">
-              <input class="input is-danger" type="text" placeholder="Buscar">
+              <input id="inputSearch" class="input is-danger" type="text" placeholder="Buscar">
             </p>
           </div>
         </div>
