--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -104,20 +104,20 @@
 
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item Subcategory" data-Subcategory="1" data-Category="1" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="1" data-Category="1">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Foto-Libro con Fotos
                     </a>
 
 
-                    <a class="navbar-item Subcategory" data-Subcategory="2" data-Category="1" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="2" data-Category="1">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Foto-Libro sin Fotos
                     </a>
                     <hr class="navbar-divider">
-                    <a class="navbar-item Subcategory" data-Subcategory="3" data-Category="1" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="3" data-Category="1">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Caja con Fotos
@@ -156,52 +156,52 @@
                   </div>
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item Subcategory" data-Subcategory="4" data-Category="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="4" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Carcasa para Celular
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="5" data-Category="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="5" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Invitación a evento - Tarjeta de felicitación
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="6" data-Category="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="6" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Portavasos
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="7" data-Category="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="7" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Porta-retrato
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="8" data-Category="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="8" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Rompecabezas
                     </a>
-                    <a class="navbar-item Subcategory"data-Subcategory="9" data-Category="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory"data-Subcategory="9" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Termo
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="10" data-Category="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="10" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Libreta
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="11" data-Category="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="11" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Mousepad
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="12" data-Category="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="12" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Playera
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="13" data-Category="2" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="13" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Lapicero
@@ -226,18 +226,18 @@
                   </div>
                   <div class="column">
                     <br><br>
-                    <a class="navbar-item Subcategory" data-Subcategory="14" data-Category="3" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="14" data-Category="3">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Marco con Foto
                     </a>
-                    <a class="navbar-item Subcategory" data-Subcategory="16" data-Category="3" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="16" data-Category="3">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Marco sin Foto
                     </a>
                     <hr class="navbar-divider">
-                    <a class="navbar-item Subcategory" data-Subcategory="15" data-Category="3" href="custom_products.html">
+                    <a class="navbar-item Subcategory" data-Subcategory="15" data-Category="3">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Bastidor con Foto
@@ -294,7 +294,7 @@
             Las posibilidades son tantas como la imaginación lo permita.<br>
           </p>
           <br> <br>
-          <a data-Subcategory="1" data-Category="1" class="Customizable" href="custom_products.html"><button
+          <a data-Subcategory="1" data-Category="1" class="Customizable"><button
               class="button is-primary is-outlined">Probar ahora</button></a>
         </div>
         <div class="column im">
