--- a/ecommerce/custom_products.html
+++ b/ecommerce/custom_products.html
@@ -57,6 +57,10 @@
                 </label>
               </div>
             </div>
+
+            <div>
+              <img src=""/>
+            </div>
         </div>
         
       </div>
