--- a/ecommerce/custom_products.html
+++ b/ecommerce/custom_products.html
@@ -199,10 +199,10 @@
     </div>
     <div class="steps-actions">
       <div class="steps-action">
-        <a href="#" data-nav="previous" class="button is-light">Previous</a>
+        <a href="#" data-nav="previous" class="button is-light">Anterior</a>
       </div>
       <div class="steps-action">
-        <a href="#" data-nav="next" class="button is-light">Next</a>
+        <a href="#" data-nav="next" class="button is-light">Siguiente</a>
       </div>
     </div>
   </div>
@@ -212,10 +212,9 @@
 
     <!-- Contenedor para los Toast -->
     <div class="toast-container">
-
     </div>
  
-    <footer class="footerEcommerce " style="padding-top: 2%;">
+    <footer class="footerEcommerce " style="padding-top: 12%;">
       <div class="firstFooter">
         <div class="line">
           <hr style="margin: 3px">
