Vista del panel de usuario
Formulario de datos del usuario, y tabla de pedidos para el historial y seguimiento de envios

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -64,7 +64,7 @@
             </p>
           </div>
         </div>
-        <div class="level-item">
+        <div class="level-item" id="Usuario">
           <a class="is-danger">
             <span class="icon">
               <i class="fas fa-user-circle fa-lg"></i>
@@ -179,7 +179,7 @@
                         <i class="fas fa-feather-alt"></i>
                       </span> Rompecabezas
                     </a>
-                    <a class="navbar-item Subcategory"data-Subcategory="9" data-Category="2">
+                    <a class="navbar-item Subcategory" data-Subcategory="9" data-Category="2">
                       <span class="icon">
                         <i class="fas fa-feather-alt"></i>
                       </span> Termo
