--- a/ecommerce/panel_usuario.html
+++ b/ecommerce/panel_usuario.html
@@ -13,6 +13,7 @@
     <div id="datos" class="tabcontent">
       <form id="form" class="" method="post">        
         <div class="field">
+          <label></label>
           <input class="input" placeholder="Nombre(s)" type="text" name="name" value="">
         </div>
         <div class="field">
@@ -51,7 +52,7 @@
             <th>Fecha</th>
             <th>Estado del pedido</th>
             <th>Num. de guía</th>
-            <th>Ver producto</th>
+            <th>Ver detalles del pedido</th>
             </tr>
         </thead>
         <tbody id="ventas">
