--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -273,13 +273,13 @@
     <section class="hero is-large has-carousel" style="padding-top: 120px;">
       <div id="carousel-demo" class="hero-carousel">
         <div class="item-11">
-          <img src="resources/hand-iphone-iphone-6-373976.jpg" />
+          <img src="resources/tazaWeb 1920 - 1@2x (2).jpg" />
         </div>
         <div class="item-22">
-          <img src="resources/bookcase.jpg" alt="img1">
+          <img src="resources/libroWeb 1920 - 1@2x (2).jpg" alt="img1">
         </div>
         <div class="item-33">
-          <img src="resources/background-notebook-pencil-544115.jpg" alt="img2">
+          <img src="resources/termoWeb 1920 - 1@2x (2).jpg" alt="img2">
         </div>
       </div>
       <div class="hero-head"></div>
