footer y personalizacion de productos

--- a/ecommerce/custom_products.html
+++ b/ecommerce/custom_products.html
@@ -97,27 +97,27 @@
           <div class="field is-horizontal">
             <div class="filtros-carousel" >
               <p>Ninguno</p>
-              <canvas id="filtro1" maxHeight="100px" class="filtered-image-carousel"></canvas>
+              <canvas id="filtro1" maxHeight="80px" class="filtered-image-carousel"></canvas>
             </div>
             <div class="filtros-carousel">
               <p>Desenfoque</p>
-              <canvas id="filtro2" maxHeight="100px" class="filtered-image-carousel"></canvas>
+              <canvas id="filtro2" maxHeight="80px" class="filtered-image-carousel"></canvas>
             </div>
             <div class="filtros-carousel">
               <p>Escala de Grises</p>
-              <canvas id="filtro3" maxHeight="100px" class="filtered-image-carousel"></canvas>
+              <canvas id="filtro3" maxHeight="80px" class="filtered-image-carousel"></canvas>
             </div>
             <div class="filtros-carousel">
               <p>Saturacion</p>
-              <canvas id="filtro4" maxHeight="100px" class="filtered-image-carousel"></canvas>
+              <canvas id="filtro4" maxHeight="80px" class="filtered-image-carousel"></canvas>
             </div>
             <div class="filtros-carousel">
               <p>Sepia</p>
-              <canvas id="filtro5" maxHeight="100px" class="filtered-image-carousel"></canvas>
+              <canvas id="filtro5" maxHeight="80px" class="filtered-image-carousel"></canvas>
             </div> 
             <div class="filtros-carousel">
               <p>Resaltar bordes</p>
-              <canvas id="filtro6" maxHeight="100px" class="filtered-image-carousel"></canvas>
+              <canvas id="filtro6" maxHeight="80px" class="filtered-image-carousel"></canvas>
             </div>
           </div>
 
@@ -127,68 +127,77 @@
       </div>
       <div class="step-content has-text-centered">
         <h3>Agrega emojis a tu gusto</h3>
-        <div id="container" class="contenedor" style="max-width: 35%; position: absolute;"></div>
-        <div class="table-container contenedor" style="position: relative; display: inline-block;">
-          <table class="table is-bordered">
-            <!-- Your table content -->
-            <tr>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f600.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f601.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f602.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f603.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f604.png"/></td>
-            </tr>
-            <tr>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f605.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f606.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f607.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f608.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f609.png"/></td>
-            </tr>
-            <tr>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f610.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f611.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f612.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f613.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f614.png"/></td>
-            </tr>
-            <tr>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f615.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f616.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f617.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f618.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f619.png"/></td>
-            </tr>
-            <tr>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f620.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f621.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f622.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f623.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f624.png"/></td>
-            </tr>
-            <tr>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f625.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f626.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f627.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f628.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f629.png"/></td>
-            </tr>
-            <tr>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f630.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f631.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f632.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f633.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f634.png"/></td>
-            </tr>
-            <tr>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f635.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f636.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f637.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f638.png"/></td>
-              <td><img class="emojis-table" src="emoji-data/img-apple-64/1f639.png"/></td>
-            </tr>
-          </table>
+        <div class="columns">
+          <div class="column is-half">
+            <!--style="max-width: 35%; position: absolute;" style="position: relative; display: inline-block;"-->
+            <div id="container" class="contenedor"></div>      
+          </div>
+          <div class="column is-half">
+              <div class="table-container contenedor">
+                  <table class="table is-bordered">
+                    <!-- Your table content -->
+                    <tr>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f600.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f601.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f602.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f603.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f604.png"/></td>
+                    </tr>
+                    <tr>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f605.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f606.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f607.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f608.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f609.png"/></td>
+                    </tr>
+                    <tr>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f610.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f611.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f612.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f613.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f614.png"/></td>
+                    </tr>
+                    <tr>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f615.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f616.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f617.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f618.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f619.png"/></td>
+                    </tr>
+                    <tr>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f620.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f621.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f622.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f623.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f624.png"/></td>
+                    </tr>
+                    <tr>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f625.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f626.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f627.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f628.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f629.png"/></td>
+                    </tr>
+                    <tr>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f630.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f631.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f632.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f633.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f634.png"/></td>
+                    </tr>
+                    <tr>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f635.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f636.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f637.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f638.png"/></td>
+                      <td><img class="emojis-table" src="emoji-data/img-apple-64/1f639.png"/></td>
+                    </tr>
+                  </table>
+                </div>
+          </div>
         </div>
+        
+        
       </div>
       <div class="step-content has-text-centered">
         <h1 class="title is-4">Listo se ha agregado tu producto al carrito!</h1>
