--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -276,12 +276,12 @@
       <div class="hero-body" style="height: 100vh;">
         <div id="carousel-demo" class="hero-carousel">
           <div class="item-11">
-            <img src="resources/TazaSINBOTON.png" alt="img0"/>
-            <a data-Subcategory="9" data-Category="2" class="Customizable">¡Diseña una propia!</a>
+            <img src="resources/carcasaSINBOTON.png" alt="img0"/>
+            <a data-Subcategory="4" data-Category="2" class="Customizable">¡Diseña una propia!</a>
           </div>
           <div class="item-22">
             <img src="resources/LibroSINBOTON2.png" alt="img1">
-            <a data-Subcategory="1" data-Category="1" class="Customizable">¡Aprovecha!</a>
+            <a data-Subcategory="2" data-Category="1" class="Customizable">¡Aprovecha!</a>
           </div>
           <div class="item-33">
             <img src="resources/TermoSINBOTON.png" alt="img2">
