--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -200,12 +200,13 @@
           <!--has-dropdown-->
           <div class="navbar-item is-hoverable is-mega">
             <div class="navbar-link">
-              Foto-Marcos
+              Foto-Regalos
+              
             </div>
             <div id="blogDropdown" class="navbar-dropdown " data-style="width: 18rem;">
               <div class="container is-fluid">
                 <div class="columns">
-                  <div class="column">
+                  <div class="column none-display">
 
                     <span id="titMenu" class="navbar-item">
                             Artículos Personalizados<br>
@@ -278,11 +279,11 @@
           </div>
           <div class="navbar-item is-hoverable">
             <div class="navbar-link">
-              Foto-Regalos
+                Foto-Marcos
             </div>
             <div id="moreDropdown" class="navbar-dropdown ">
                 <div class="columns">
-                    <div class="column">
+                    <div class="column none-display">
                         <span id="titMenu" class="navbar-item">
                             Artículos Personalizados<br>
                         </span>
@@ -307,7 +308,7 @@
                             </span> Bastidor con Foto
                         </a>
                         </div>
-                        <div class="column rightSide">
+                        <div class="column rightSide none-display">
                         <br><br>
                         <img src="resources/frame.jpg" alt="img1">
                         <br>
