--- a/ecommerce/catalogoProducts.html
+++ b/ecommerce/catalogoProducts.html
@@ -1,4 +1,24 @@
-    <!-- Sección donde se agregará los demás elementos html -->
-      <section id="products"  style="padding-top: 120px;padding-left: 20px;padding-right: 20px; height: 100vh;">
-            
-      </section>
+<!-- Sección donde se agregará los demás elementos html -->
+<section style="padding-top: 150px;padding-left: 20px;padding-right: 20px; height: 100vh;">
+  <div class="container">
+    <nav aria-label="Page navigation">
+      <center>
+        <ul class="pagination" id="pagination1"></ul>
+      </center>
+    </nav>
+  </div>
+
+  <section id="team" class="has-text-centered">
+    <div class="container is-medium box" id="products">
+
+    </div>
+  </section>
+
+  <div class="container">
+    <nav aria-label="Page navigation">
+      <center>
+        <ul class="pagination" id="pagination2"></ul>
+      </center>
+    </nav>
+  </div>
+</section>
