--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -25,7 +25,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-steps@2.2.1/dist/css/bulma-steps.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/css/bulma-carousel.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-divider@0.2.0/dist/css/bulma-divider.min.css">
-  <link rel="stylesheet" type="text/css" href="css/home.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
   <script src="js/jquery-3.4.1.js"></script>
@@ -612,6 +611,7 @@
   <script src="js/jquery.steps.js"></script>
 
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="js/jquery.twbsPagination.js" type="text/javascript"></script>
 
   <script type="text/javascript"
     src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
