icon user E-commerce

--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -76,8 +76,13 @@
             <div class="level-item" id="usuario" data-user="0">
                 <div class="field has-addons">
                     <p class="control">
-                        <button class="button is-white">asd</button>
+                        <button class="button is-white"><i class="fas fa-user-circle fa-lg"></i></button>
                     </p>
+                  <!-- <a>
+                    <span class="icon">
+                        <i class="fas fa-user-circle fa-lg"></i>
+                    </span>
+                  </a> -->
                 </div>
             </div>
             <div class="level-item">
