--- a/ecommerce/panel_usuario.html
+++ b/ecommerce/panel_usuario.html
@@ -7,6 +7,7 @@
         <ul>
             <li class="is-active tablinks" onclick="openTab(event, 'datos')"><a>Mis datos</a></li>
             <li class="tablinks"  onclick="openTab(event, 'pedidos')"><a>Mis pedidos</a></li>
+            <li class="tablinks logOut"><a>Cerrar sesión</a></li>
         </ul>
     </div>
     
