--- a/ecommerce/index.html
+++ b/ecommerce/index.html
@@ -69,7 +69,7 @@
             <div class="level-item" id="logIn">
                 <div class="field has-addons">
                     <p class="control">
-                        <button class="button is-white">Iniciar sesion | Registrarse</button>
+                        <button class="button is-white">Iniciar sesión | Registrarse</button>
                     </p>
                 </div>
             </div>
