--- a/ecommerce/signIn.html
+++ b/ecommerce/signIn.html
@@ -4,7 +4,7 @@
 
 				
 			<div class="column is-half">
-				<h1>Iniciar sesion</h1>
+				<h1>Iniciar sesión</h1>
 				<div class="field">
                     <label for="mainEmail" class="label">Correo:</label>
                     <p class="control has-icons-left">
@@ -31,7 +31,7 @@
                 <br>
                 <p class="buttons">
                 	<button class="button is-success is-fullwidth" id="iniciarSesion">
-					    <span>Iniciar sesion</span>
+					    <span>Iniciar sesión</span>
 					</button>
                 </p>                
             </div>
